--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,43 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form>
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input
-            type="text"
-            id="username"
-            class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="email">email</label>
-          <input
-            type="text"
-            id="email"
-            class="form-control">
+      <app-assignment></app-assignment>
+    </div>
+  </div>
+  <br><br>
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+        <div formGroupName="userData">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input formControlName="username" type="text" id="username" class="form-control">
+            <span *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched"
+              class="help-block">Please
+              enter a valid username.</span>
+          </div>
+          <div class="form-group">
+            <label for="email">email</label>
+            <input formControlName="email" type="text" id="email" class="form-control">
+            <span *ngIf="!signupForm.get('userData.email').valid && signupForm.get('userData.email').touched" class="help-block">Please
+              enter a valid email.</span>
+          </div>
         </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
-            <input
-              type="radio"
-              [value]="gender">{{ gender }}
+            <input formControlName="gender" type="radio" [value]="gender">{{ gender }}
           </label>
         </div>
+        <div formArrayName="hobbies">
+          <h4>Your Hobbies</h4>
+          <button class="btn btn-default" type="button" (click)="onAddHobby()">Add Hobby</button>
+          <div class="form-group" *ngFor="let hobbyControl of signupForm.get('hobbies').controls; let i = index">
+            <input type="text" class="form-controls" [formControlName]="i">
+          </div>
+        </div>
+        <span *ngIf="hasError('userData.username','required')">Name Required (using hasError())</span>
+        <span *ngIf="signupForm.get('userData.username').hasError('nameIsForbidden')">Name is forbidden.</span>
+        <br>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
